# twilio-alta-ai

./: assistant.py  budget_classes.py  conversationa_test.py  main.py  pyproject.toml  schemas.py  thread_types.py  twilio_utils.py
functions/: calcular_plafon_corrido.py  calculo_lambrin_ext.py  calculo_lambrin_interior.py  calculo_muro_durock.py  calculo_plafon.py  calculo_plafon_corrido.py  muro_interior.py
functions/open_ai_funcs/: calcular_costo_muro_durock.json  calcular_costo_plafon_reticular.json  calcular_plafon_corrido.json  calculo_lambrin_ext.json  calculo_lambrin_interior.json
